--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
-title: Architect theme
-description: Architect is a theme for GitHub Pages.
+title: {{ Vishnu Jayan }}
+description: Software Engineer.
+subtitle: Resourceful professional with more than 2 year experience in PHP open source technologies and
+website design technologies
 show_downloads: true
 google_analytics:
-theme: 
+theme: jekyll-theme-architect
