--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: {{ Vishnu Jayan }}
 description: Software Engineer.
-subtitle: Resourceful professional with more than 2 year experience in PHP open source technologies and
-website design technologies
+subtitle: Resourceful professional with more than 2 year experience in PHP open source technologies and website design technologies
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-architect
