--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,10 @@ title: Vishnu Jayan
 description: Software Engineer.
 subtitle: Resourceful professional with more than 2 year experience in PHP open source technologies and website design technologies
 show_downloads: true
+github:
+  is_project_page: true
+  url: https://github.com/itsmevishnu
+  is_project_page: true
 google_analytics:
 theme: jekyll-theme-architect
 resume: assets/doc/vishnu.pdf
