--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Vishnu Jayan
-description: Software Engineer.
+description: A software Engineer.
 subtitle: Resourceful professional with more than 2 year experience in PHP open source technologies and website design technologies
 show_downloads: true
 github:
