change the about as change new icon

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Vishnu Jayan
 description: A software Engineer.
-subtitle: Resourceful professional with more than 2 year experience in PHP open source technologies and website design technologies
+subtitle: Resourceful professional with more than 2 year experience in PHP open source technologies and website design technologies.
 show_downloads: true
 github:
   is_project_page: true
